Optimize page: content/english/java/advanced-options/groupdocs-signature-java-file-format-support/_index.md - - Updated front‑matter date and converted `keywords` to a YAML list containing primary and secondary keywords. (#29)
Auto-merge: Optimize 22 Signature Java pages (arbiter score 100/100)