@@ -1,45 +1,112 @@
 ---
-"date": "2025-05-08"
-"description": "विभिन्न फ़ाइल स्वरूपों को कुशलतापूर्वक प्रबंधित और समर्थित करने के लिए GroupDocs.Signature for Java का उपयोग करना सीखें। इस चरण-दर-चरण मार्गदर्शिका के साथ अपने दस्तावेज़ प्रबंधन सिस्टम को बेहतर बनाएँ।"
-"title": "GroupDocs में मास्टर फ़ाइल स्वरूप समर्थन.Java के लिए हस्ताक्षर एक व्यापक गाइड"
-"url": "/hi/java/advanced-options/groupdocs-signature-java-file-format-support/"
-"weight": 1
+categories:
+- Java Document Processing
+date: '2026-05-11'
+description: Learn how to check file extension java and validate document formats
+  using GroupDocs.Signature. Complete guide with code examples, troubleshooting tips,
+  and best practices for document type checking.
+keywords:
+- check file extension java
+- validate document type java
+- java upload file validation
+- how to detect file format java
+lastmod: '2025-01-02'
+linktitle: Java File Format Detection Guide
+schemas:
+- author: GroupDocs
+  dateModified: '2026-05-11'
+  description: Learn how to check file extension java and validate document formats
+    using GroupDocs.Signature. Complete guide with code examples, troubleshooting
+    tips, and best practices for document type checking.
+  headline: Java File Format Detection - Validate and Check Document Types
+  type: TechArticle
+- questions:
+  - answer: Change the `<version>` tag in your `pom.xml` to the desired version, then
+      run `mvn clean install`. Always review the [release notes](https://releases.groupdocs.com/signature/java/)
+      for breaking changes.
+    question: How do I update my GroupDocs.Signature library version in Maven?
+  - answer: Yes. The library performs content‑based validation, so a file renamed
+      from `.exe` to `.pdf` will be rejected as not a valid PDF during processing.
+      `getSupportedFileTypes()` only lists formats the library can handle; you still
+      need to attempt opening the file to verify its true type.
+    question: Can GroupDocs.Signature detect file formats even if the extension is
+      wrong?
+  - answer: The free trial gives immediate access but includes evaluation watermarks
+      and some feature limits. A temporary license provides full feature access for
+      30 days without watermarks, ideal for thorough testing in a production‑like
+      environment.
+    question: What's the difference between a free trial and temporary license?
+  - answer: 'Return a concise error like “Unsupported format. Supported extensions
+      are: .pdf, .docx, .xlsx, .png, .jpg.” Log the incident for security monitoring
+      and consider notifying the user with a UI tooltip that lists allowed types.'
+    question: How should I handle unsupported file formats in my application?
+  - answer: Yes, but you must supply the password when creating the `Signature` instance.
+      Format detection itself does not require the password, but any subsequent processing
+      (e.g., adding a signature) will.
+    question: Does GroupDocs.Signature work with encrypted or password‑protected files?
+  type: FAQPage
+tags:
+- file-validation
+- java-libraries
+- document-management
+- format-detection
+title: Java File Format Detection - Validate and Check Document Types
 type: docs
+url: /hi/java/advanced-options/groupdocs-signature-java-file-format-support/
+weight: 1
 ---
-# GroupDocs में मास्टर फ़ाइल प्रारूप समर्थन.Java के लिए हस्ताक्षर: एक व्यापक मार्गदर्शिका
 
-## परिचय
+# फ़ाइल एक्सटेंशन जावा जांचें – जावा फ़ाइल फ़ॉर्मेट डिटेक्शन: वैधता और दस्तावेज़ प्रकार जांचें
 
-जावा के लिए GroupDocs.Signature लाइब्रेरी का उपयोग करके, आप अपने दस्तावेज़ प्रबंधन सिस्टम को विभिन्न प्रकार के फ़ाइल स्वरूपों का समर्थन करके और भी बेहतर बना सकते हैं। यह ट्यूटोरियल इस शक्तिशाली टूल का उपयोग करने के तरीके के बारे में विस्तृत जानकारी प्रदान करता है, जिससे आपके अनुप्रयोगों में निर्बाध एकीकरण और मज़बूत कार्यक्षमता संभव हो सके।
+सबसे सामान्य कार्यों में से एक है दस्तावेज़ को प्रोसेस करने से पहले **फ़ाइल एक्सटेंशन जावा** की जाँच करना।  
 
-### आप क्या सीखेंगे:
-- समर्थित फ़ाइल स्वरूपों को पुनः प्राप्त करने के लिए Java हेतु GroupDocs.Signature का क्रियान्वयन।
-- निर्भरताएं स्थापित करना और अपने वातावरण को कॉन्फ़िगर करना.
-- व्यावहारिक अनुप्रयोगों और अन्य प्रणालियों के साथ एकीकरण की संभावनाओं की खोज करना।
-- लाइब्रेरी के लिए विशिष्ट प्रदर्शन अनुकूलन तकनीकों को लागू करना।
+क्या आपने कभी फ़ाइल अपलोड की है और आपका एप्लिकेशन क्रैश हो गया क्योंकि फ़ॉर्मेट अपेक्षित नहीं था? आप अकेले नहीं हैं। जावा में फ़ाइल फ़ॉर्मेट का पता लगाना और वैधता जांचना मजबूत दस्तावेज़ प्रोसेसिंग एप्लिकेशन बनाने के लिए अत्यंत महत्वपूर्ण है—लेकिन यह फ़ाइल एक्सटेंशन की जाँच से अधिक जटिल है (जो आसानी से स्पूफ़ या गलत हो सकते हैं)।
 
-यह सुनिश्चित करने के लिए कि आपका सिस्टम विभिन्न प्रकार के दस्तावेज़ों को आसानी से संभाल सके, इस यात्रा पर निकल पड़ें। शुरू करने से पहले, सुनिश्चित करें कि आपके पास एक सुचारू सेटअप अनुभव के लिए सभी आवश्यक पूर्वापेक्षाएँ तैयार हैं।
+इस गाइड में, आप सीखेंगे कि कैसे GroupDocs.Signature का उपयोग करके जावा में फ़ाइल फ़ॉर्मेट को विश्वसनीय रूप से पता लगाया जाए, जो सरल एक्सटेंशन जाँच से आगे जाता है। चाहे आप दस्तावेज़ प्रबंधन प्रणाली बना रहे हों, उपयोगकर्ता अपलोड की वैधता जांच रहे हों, या क्लाउड स्टोरेज सेवाओं के साथ एकीकरण कर रहे हों, आप विविध दस्तावेज़ प्रकारों को आत्मविश्वास के साथ संभालने के व्यावहारिक तकनीकें पाएंगे।
 
-## आवश्यक शर्तें
+**आप क्या सीखेंगे:**
+- जावा में प्रोग्रामेटिक रूप से समर्थित फ़ाइल फ़ॉर्मेट कैसे प्राप्त करें
+- लाइब्रेरी‑आधारित डिटेक्शन बनाम बिल्ट‑इन जावा तरीकों का कब उपयोग करें
+- फ़ाइल प्रकारों की वैधता जांचते समय सामान्य गड़बड़ियाँ (और उन्हें कैसे टालें)
+- वास्तविक‑दुनिया एकीकरण परिदृश्य और प्रदर्शन अनुकूलन टिप्स
+- फ़ॉर्मेट डिटेक्शन समस्याओं के लिए ट्रबलशूटिंग रणनीतियाँ
 
-Java के लिए GroupDocs.Signature को क्रियान्वित करने से पहले, इन आवश्यकताओं के साथ तैयारी करें:
+अंत तक, आपके पास एक कार्यशील इम्प्लीमेंटेशन होगा जिसे आप तुरंत अपने जावा एप्लिकेशन में डाल सकते हैं। चलिए शुरू करते हैं यह सुनिश्चित करके कि आपके पास सब कुछ तैयार है।
 
-### आवश्यक लाइब्रेरी और संस्करण:
-- **GroupDocs.Signature लाइब्रेरी**: संस्करण 23.12 या बाद का संस्करण अनुशंसित है।
-- सुनिश्चित करें कि आपका विकास वातावरण जावा (JDK 1.8+) का समर्थन करता है।
+## त्वरित उत्तर
+- **फ़ाइल एक्सटेंशन जावा की सबसे तेज़ जाँच का तरीका क्या है?** `Signature.getSupportedFileTypes()` का उपयोग करके पूरी सूची प्राप्त करें और फ़ाइल के एक्सटेंशन की तुलना करें।  
+- **क्या GroupDocs.Signature उपयोग करने के लिए लाइसेंस चाहिए?** विकास के लिए एक फ्री ट्रायल काम करता है; एक स्थायी लाइसेंस सभी मूल्यांकन सीमाओं को हटा देता है।  
+- **क्या मैं पूरे फ़ाइल को पढ़े बिना अपलोड की वैधता जांच सकता हूँ?** हाँ—GroupDocs.Signature फ़ाइल हेडर की जांच करता है, जो पूरे दस्तावेज़ को लोड करने से बहुत सस्ता है।  
+- **GroupDocs.Signature कितने फ़ॉर्मेट सपोर्ट करता है?** 50 से अधिक इनपुट और आउटपुट फ़ॉर्मेट, जैसे PDF, DOCX, XLSX, PPTX, JPG, PNG, और कई अन्य।  
+- **फ़ॉर्मेट सूची को कैश करना आवश्यक है?** कैशिंग दोहराए गए रिफ्लेक्शन ओवरहेड को समाप्त करता है और उच्च‑वॉल्यूम सेवाओं के थ्रूपुट को सुधारता है।
 
-### पर्यावरण सेटअप आवश्यकताएँ:
-- निर्भरता प्रबंधन के लिए मावेन या ग्रेडेल की बुनियादी समझ।
-- कोर जावा प्रोग्रामिंग अवधारणाओं से परिचित होना।
+## पूर्वापेक्षाएँ
 
-इन पूर्वावश्यकताओं के साथ, आइए अपने प्रोजेक्ट में Java के लिए GroupDocs.Signature सेट अप करने के लिए आगे बढ़ें।
+फ़ाइल फ़ॉर्मेट डिटेक्शन में गहराई से जाने से पहले, सुनिश्चित करें कि आपके पास ये आवश्यक चीज़ें तैयार हैं:
 
-## Java के लिए GroupDocs.Signature सेट अप करना
+### आवश्यक लाइब्रेरी और संस्करण
+- **GroupDocs.Signature Library**: संस्करण 23.12 या बाद का (हम नवीनतम स्थिर रिलीज़ का उपयोग करेंगे)  
+- **Java Development Kit**: JDK 1.8 या उच्चतर (बेहतर प्रदर्शन के लिए JDK 11+ की सिफ़ारिश)  
+- **Build Tool**: Maven 3.x या Gradle 6.x डिपेंडेंसी मैनेजमेंट के लिए  
 
-Maven या Gradle जैसे पैकेज मैनेजरों का उपयोग करके GroupDocs.Signature लाइब्रेरी को सेट अप करना बहुत आसान है। इन चरणों का पालन करें:
+### पर्यावरण सेटअप आवश्यकताएँ
+आपको इन चीज़ों में सहज होना चाहिए:
+- बेसिक जावा प्रोग्रामिंग कॉन्सेप्ट (क्लासेज़, लूप्स, इम्पोर्ट्स)  
+- Maven या Gradle का उपयोग करके डिपेंडेंसी मैनेज करना  
+- अपने IDE या कमांड लाइन से जावा एप्लिकेशन चलाना  
 
-### मावेन का उपयोग करना:
-इस निर्भरता को अपने में जोड़ें `pom.xml` फ़ाइल:
+**त्वरित टिप:** यदि आप बड़े दस्तावेज़ों के साथ काम कर रहे हैं या फ़ाइलों को समवर्ती रूप से प्रोसेस करने की योजना बना रहे हैं, तो अपने JVM को पर्याप्त हीप मेमोरी दें (हम बाद में ऑप्टिमाइज़ेशन कवर करेंगे)।
+
+पर्यावरण तैयार है, अब GroupDocs.Signature को अपने प्रोजेक्ट में सेटअप करने की ओर बढ़ते हैं।
+
+## GroupDocs.Signature को जावा के लिए सेटअप करना
+
+GroupDocs.Signature को अपने प्रोजेक्ट में लाना सीधा है—अपनी पसंदीदा बिल्ड टूल चुनें और साथ चलें।
+
+### Maven का उपयोग
+
+अपने `pom.xml` फ़ाइल में यह डिपेंडेंसी जोड़ें:
+
 ```xml
 <dependency>
     <groupId>com.groupdocs</groupId>
@@ -47,106 +114,580 @@ Maven या Gradle जैसे पैकेज मैनेजरों का
     <version>23.12</version>
 </dependency>
 ```
-### ग्रैडल का उपयोग करना:
-इस पंक्ति को अपने में शामिल करें `build.gradle` फ़ाइल:
+
+डिपेंडेंसी जोड़ने के बाद, लाइब्रेरी डाउनलोड करने के लिए `mvn clean install` चलाएँ।
+
+### Gradle का उपयोग
+
+अपने `build.gradle` फ़ाइल में यह लाइन शामिल करें:
+
 ```gradle
 implementation 'com.groupdocs:groupdocs-signature:23.12'
 ```
-### प्रत्यक्षत: डाउनलोड:
-वैकल्पिक रूप से, नवीनतम संस्करण यहां से डाउनलोड करें [Java रिलीज़ के लिए GroupDocs.Signature](https://releases.groupdocs.com/signature/java/).
 
-#### लाइसेंस प्राप्ति चरण:
-- **मुफ्त परीक्षण**: कार्यक्षमताओं का परीक्षण करने के लिए उपलब्ध.
-- **अस्थायी लाइसेंस**: मूल्यांकन के दौरान अप्रतिबंधित पहुंच के लिए एक अस्थायी लाइसेंस प्राप्त करें।
-- **खरीदना**: स्थायी लाइसेंस खरीदें [ग्रुपडॉक्स खरीदारी पृष्ठ](https://purchase.groupdocs.com/buy) यदि परीक्षण से संतुष्ट हों।
+फिर अपने Gradle प्रोजेक्ट को सिंक करें या `gradle build` चलाएँ।
 
-### बुनियादी आरंभीकरण और सेटअप
-अपने जावा अनुप्रयोग में GroupDocs.Signature को निम्न प्रकार से आरंभ करें:
+### डायरेक्ट डाउनलोड विकल्प
+
+बिल्ड टूल का उपयोग नहीं कर रहे हैं? आप JAR सीधे [GroupDocs.Signature for Java releases](https://releases.groupdocs.com/signature/java/) से डाउनलोड कर सकते हैं और मैन्युअली अपने क्लासपाथ में जोड़ सकते हैं। (हालाँकि ईमानदारी से कहें तो, Maven या Gradle का उपयोग करने से भविष्य में सिरदर्द कम होगा।)
+
+### लाइसेंस प्राप्त करने के चरण
+
+GroupDocs.Signature लचीले लाइसेंसिंग विकल्प प्रदान करता है:
+
+- **Free Trial**: परीक्षण के लिए परफ़ेक्ट—[कोई क्रेडिट कार्ड आवश्यक नहीं](https://releases.groupdocs.com/signature/java/) के साथ तुरंत शुरू करें  
+- **Temporary License**: अधिक समय चाहिए? अनलिमिटेड एक्सेस के लिए 30‑दिन का टेम्पररी लाइसेंस अनुरोध करें  
+- **Purchase**: जब आप प्रोडक्शन के लिए तैयार हों, तो [GroupDocs Purchase Page](https://purchase.groupdocs.com/buy) से स्थायी लाइसेंस प्राप्त करें  
+
+**Pro tip:** सभी फीचर एक्सप्लोर करने के लिए फ्री ट्रायल से शुरू करें। टेम्पररी लाइसेंस वॉटरमार्क और सीमाओं को हटाता है यदि आपको विस्तारित मूल्यांकन समय चाहिए।
+
+### बेसिक इनिशियलाइज़ेशन और सेटअप
+
+`Signature` GroupDocs.Signature में सभी ऑपरेशन्स का कोर एंट्री पॉइंट है। यह दस्तावेज़ लोडिंग, फ़ॉर्मेट हैंडलिंग, और सिग्नेचर प्रोसेसिंग को एन्कैप्सुलेट करता है।
+
+अपने जावा एप्लिकेशन में GroupDocs.Signature को इनिशियलाइज़ करने का तरीका यहाँ है:
+
 ```java
 import com.groupdocs.signature.Signature;
-// हस्ताक्षर वर्ग का एक उदाहरण बनाएँ.
+
+// Create an instance of Signature class
 Signature signature = new Signature("sample.pdf");
 ```
-सेटअप पूरा होने के बाद, आइए देखें कि समर्थित फ़ाइल स्वरूप प्राप्त करने के लिए सुविधा को कैसे कार्यान्वित किया जाए।
 
-## कार्यान्वयन मार्गदर्शिका
+यह निर्दिष्ट दस्तावेज़ के लिए एक सिग्नेचर ऑब्जेक्ट बनाता है। आप वास्तविक दस्तावेज़ों के साथ काम करते समय इस पैटर्न का उपयोग करेंगे, लेकिन समर्थित फ़ॉर्मेट प्राप्त करने के लिए आपको विशिष्ट फ़ाइल की आवश्यकता नहीं होगी (अगले सेक्शन में दिखाएंगे)।
 
-यह अनुभाग आपको Java के लिए GroupDocs.Signature का उपयोग करके समर्थित फ़ाइल स्वरूपों की सूची प्राप्त करने और प्रदर्शित करने के लिए कार्यक्षमता को कार्यान्वित करने में मार्गदर्शन करता है।
+सेटअप पूरा हो गया है, अब मुख्य कार्यक्षमता को लागू करते हैं ताकि फ़ाइल फ़ॉर्मेट का पता लगाया और समर्थित फ़ॉर्मेट प्राप्त किए जा सकें।
 
-### अवलोकन
-इसका मुख्य उद्देश्य इसका उपयोग करना है `FileType` लाइब्रेरी के भीतर सभी समर्थित फ़ाइल प्रकारों को लाने के लिए एक उपयोगिता। यह सुविधा आपके एप्लिकेशन को बिना किसी पूर्व हार्डकोडिंग के विभिन्न दस्तावेज़ प्रकारों के साथ गतिशील रूप से अनुकूलित होने की अनुमति देती है।
+## इम्प्लीमेंटेशन गाइड
 
-#### चरण-दर-चरण कार्यान्वयन
-**1. आवश्यक कक्षाएं आयात करें**
-GroupDocs.Signature से आवश्यक कक्षाएं आयात करके आरंभ करें:
+यहाँ से व्यावहारिक भाग शुरू होता है। हम एक सरल यूटिलिटी बनाएँगे जो सभी समर्थित फ़ाइल फ़ॉर्मेट को रिट्रीव करता है—इसे आपके दस्तावेज़ प्रोसेसिंग पाइपलाइन के “कम्पैटिबिलिटी चेकर” के रूप में सोचें।
+
+### क्यों महत्वपूर्ण है
+
+वास्तविक फ़ीचर इम्प्लीमेंट करने से पहले आपको यह जानना ज़रूरी है कि लाइब्रेरी कौन‑से फ़ाइल प्रकार सपोर्ट करती है। यह इम्प्लीमेंटेशन आपको डायनामिक रूप से वह जानकारी देता है, जिसका मतलब है:
+- हार्ड‑कोडेड एक्सटेंशन लिस्ट नहीं जो जल्दी पुरानी हो जाती है  
+- उपयोगकर्ता अपलोड की वैधता को समर्थित फ़ॉर्मेट के खिलाफ आसानी से जांचें  
+- UI में फ़ाइल टाइप फ़िल्टर बनाने के लिए त्वरित रेफ़रेंस  
+
+### चरण‑दर‑चरण इम्प्लीमेंटेशन
+
+**1. आवश्यक क्लासेज़ इम्पोर्ट करें**
+
+`FileType` फ़ॉर्मेट डिटेक्शन का गेटवे है—यह सभी समर्थित डॉक्यूमेंट टाइप्स की मेटाडेटा रखता है।
+
 ```java
 import com.groupdocs.signature.domain.documentpreview.FileType;
 import java.util.List;
 ```
-**2. पुनर्प्राप्ति कार्यक्षमता के लिए एक वर्ग बनाएँ**
-नाम से एक क्लास बनाएँ `GetSupportedFileFormats` और फ़ाइल प्रकारों को पुनः प्राप्त करने के लिए मुख्य कार्यक्षमता शामिल करें:
+
+`FileType` क्लास GroupDocs.Signature का डिस्क्रिप्टर है, जो एक्सटेंशन, MIME टाइप, और डिस्क्रिप्शन जैसी प्रॉपर्टीज़ एक्सपोज़ करता है।
+
+**2. रिट्रीवल क्लास बनाएं**
+
+पूरा इम्प्लीमेंटेशन यहाँ है:
+
 ```java
 public class GetSupportedFileFormats {
     public static void run() {
-        // FileType उपयोगिता से समर्थित फ़ाइल प्रकारों की सूची प्राप्त करें।
+        // Retrieve a list of supported file types from the FileType utility.
         List<FileType> supportedFileTypes = FileType.getSupportedFileTypes();
 
-        // प्रत्येक FileType ऑब्जेक्ट पर पुनरावृति करें और उसके एक्सटेंशन को कंसोल पर प्रिंट करें।
+        // Iterate over each FileType object and print its extension to the console.
         for (FileType fileType : supportedFileTypes) {
             System.out.print("\n" + fileType.getExtension());
         }
     }
 }
 ```
-**स्पष्टीकरण:**
-- `getSupportedFileTypes()`: GroupDocs.Signature द्वारा समर्थित सभी फ़ाइल स्वरूपों को प्राप्त करता है, और उन्हें एक सूची के रूप में लौटाता है `FileType` वस्तुएं.
-- लूप सूची के माध्यम से पुनरावृत्त होता है और प्रत्येक फ़ाइल एक्सटेंशन को आउटपुट करता है।
 
-### कुंजी कॉन्फ़िगरेशन विकल्प
-यद्यपि यह सुविधा सरल है, फिर भी सुनिश्चित करें कि आपके अनुप्रयोग का वातावरण संभावित अपवादों या समर्थित प्रकारों की बड़ी सूची को संभालने के लिए सही ढंग से कॉन्फ़िगर किया गया है।
+**क्या हो रहा है:**
+- `getSupportedFileTypes()`: यह स्टैटिक मेथड लाइब्रेरी के इंटरनल रजिस्ट्री को क्वेरी करता है और `FileType` ऑब्जेक्ट्स की पूरी लिस्ट रिटर्न करता है  
+- लूप प्रत्येक फ़ॉर्मेट पर इटररेट करता है और उसका एक्सटेंशन (जैसे `.pdf`, `.docx`, `.xlsx`) आउटपुट करता है  
+- प्रत्येक `FileType` ऑब्जेक्ट में अतिरिक्त मेटाडेटा भी होता है जिसे आप एक्सेस कर सकते हैं (नीचे देखेंगे)
 
-**समस्या निवारण युक्तियों:**
-- सत्यापित करें कि सभी निर्भरताएं आपके प्रोजेक्ट बिल्ड कॉन्फ़िगरेशन में सही ढंग से शामिल हैं।
-- GroupDocs.Signature लाइब्रेरी पर अपडेट की जाँच करें जो अतिरिक्त फ़ाइल स्वरूपों के लिए समर्थन बढ़ा सकती है।
+### बेसिक एक्सटेंशन से आगे
 
-## व्यावहारिक अनुप्रयोगों
+`FileType` ऑब्जेक्ट सिर्फ एक्सटेंशन से अधिक देता है। आप और भी जानकारी रिट्रीव कर सकते हैं:
 
-यह समझना कि GroupDocs.Signature द्वारा कौन से फ़ाइल स्वरूप समर्थित हैं, विभिन्न व्यावहारिक अनुप्रयोगों को खोल सकता है:
-1. **दस्तावेज़ प्रबंधन प्रणालियाँ**: उपलब्ध प्रारूपों के आधार पर दस्तावेज़ प्रबंधन प्रक्रियाओं को स्वचालित रूप से अनुकूलित करें।
-2. **क्लाउड स्टोरेज सेवाओं के साथ एकीकरण**: AWS S3 या Google Drive जैसी सेवाओं से दस्तावेज़ अपलोड या डाउनलोड करते समय संगतता सुनिश्चित करें।
-3. **एंटरप्राइज़ अनुप्रयोग**: उपयोगकर्ताओं को विभिन्न प्रकार के दस्तावेज़ों के साथ सहजता से काम करने की अनुमति देकर व्यावसायिक वर्कफ़्लो को बेहतर बनाएँ।
+```java
+for (FileType fileType : supportedFileTypes) {
+    System.out.println("Extension: " + fileType.getExtension());
+    System.out.println("Format: " + fileType.getFileFormat());
+    // Additional properties available depending on version
+}
+```
 
-## प्रदर्शन संबंधी विचार
-GroupDocs.Signature का उपयोग करते समय अपने एप्लिकेशन के प्रदर्शन को अनुकूलित करने में कई रणनीतियाँ शामिल हैं:
-- **कुशल मेमोरी प्रबंधन**जावा मेमोरी को प्रभावी ढंग से प्रबंधित करें, विशेष रूप से बड़े दस्तावेज़ों के साथ काम करते समय।
-- **संसाधन उपयोग दिशानिर्देश**: संसाधन उपयोग की निगरानी करें और अपने अनुप्रयोग की विशिष्ट आवश्यकताओं के आधार पर अनुकूलन करें।
+यह उपयोगी है जब आपको यूज़र‑फ्रेंडली फ़ॉर्मेट नाम दिखाने या फ़ॉर्मेट को टाइप (डॉक्यूमेंट्स बनाम स्प्रेडशीट्स बनाम इमेजेज) के आधार पर ग्रुप करने की जरूरत हो।
 
-इन सर्वोत्तम प्रथाओं का पालन करने से आपके कार्यान्वयन में इष्टतम प्रदर्शन बनाए रखने में मदद मिलेगी।
+## इस एप्रोच का उपयोग कब करें
 
-## निष्कर्ष
-इस ट्यूटोरियल में, हमने Java के लिए GroupDocs.Signature का उपयोग करके समर्थित फ़ाइल स्वरूपों को प्राप्त करने और अपने एप्लिकेशन की क्षमता बढ़ाने का तरीका बताया है। बताए गए कार्यान्वयन चरणों का पालन करके, आप इस सुविधा को अपने प्रोजेक्ट्स में आसानी से एकीकृत कर सकते हैं।
+हर स्थिति में लाइब्रेरी‑आधारित समाधान आवश्यक नहीं होता। नीचे उन परिस्थितियों का विवरण है जहाँ GroupDocs.Signature का फ़ॉर्मेट डिटेक्शन चमकता है:
 
-### अगले कदम:
-- GroupDocs.Signature द्वारा प्रस्तुत अतिरिक्त सुविधाओं का प्रयोग करें।
-- अन्य सेवाओं या प्लेटफार्मों के साथ एकीकरण विकल्पों का अन्वेषण करें।
+### परफ़ेक्ट यूज़ केस
 
-क्या आप इसे लागू करने के लिए तैयार हैं? इन तकनीकों को आज़माएँ और देखें कि ये आपके जावा एप्लिकेशन को कैसे फ़ायदा पहुँचा सकती हैं!
+**1. डॉक्यूमेंट अपलोड वैलिडेटर्स**  
+जब उपयोगकर्ता फ़ाइलें अपलोड करते हैं, तो सर्वर‑साइड पर फ़ॉर्मेट वैधता जांचें (क्लाइंट‑साइड वैलिडेशन पर कभी भरोसा न करें)। यह एप्रोच आपको प्रोसेसिंग से पहले समर्थित फ़ॉर्मेट की व्यापक लिस्ट के खिलाफ चेक करने देता है।
 
-## FAQ अनुभाग
-1. **मैं Maven में अपने GroupDocs.Signature लाइब्रेरी संस्करण को कैसे अपडेट करूं?**
-   - अपडेट करें `<version>` अपने टैग में `pom.xml` फ़ाइल को वांछित संस्करण संख्या पर ले जाएँ।
-2. **क्या मैं अन्य दस्तावेज़ लाइब्रेरी के साथ GroupDocs.Signature का उपयोग कर सकता हूँ?**
-   - हां, इसे उन्नत कार्यक्षमता के लिए अन्य दस्तावेज़ प्रसंस्करण उपकरणों के साथ एकीकृत किया जा सकता है।
-3. **GroupDocs.Signature के लिए अस्थायी लाइसेंस क्या है?**
-   - अस्थायी लाइसेंस, मूल्यांकन के दौरान बिना किसी प्रतिबंध के पूर्ण सुविधा तक पहुंच की अनुमति देता है।
-4. **मैं अपने अनुप्रयोग में असमर्थित फ़ाइल स्वरूपों को कैसे संभालूँ?**
-   - असमर्थित फ़ाइलों के बारे में उपयोगकर्ताओं को सुचारू रूप से प्रबंधित करने और सूचित करने के लिए त्रुटि प्रबंधन तर्क को कार्यान्वित करें।
-5. **क्या GroupDocs.Signature के लिए कोई समुदाय या सहायता मंच है?**
-   - हां, आप इसके माध्यम से समर्थन और चर्चा तक पहुंच सकते हैं [ग्रुपडॉक्स फ़ोरम](https://forum.groupdocs.com/c/signature/).
+**2. डायनामिक फ़ाइल टाइप फ़िल्टर्स**  
+फ़ाइल पिकर या अपलोड इंटरफ़ेस बना रहे हैं? स्थैतिक एरे बनाए रखने की बजाय अपनी अनुमति वाले फ़ॉर्मेट लिस्ट को डायनामिक रूप से जेनरेट करें, जिससे लाइब्रेरी के अपडेट के साथ सिंक बना रहे।
+
+**3. मल्टी‑फ़ॉर्मेट डॉक्यूमेंट प्रोसेसिंग पाइपलाइन**  
+यदि आप ईमेल अटैचमेंट्स, क्लाउड स्टोरेज, या यूज़र अपलोड जैसे विभिन्न स्रोतों से डॉक्यूमेंट प्रोसेस कर रहे हैं, तो विश्वसनीय फ़ॉर्मेट डिटेक्शन आवश्यक है ताकि फ़ाइलों को उचित हैंडलर को रूट किया जा सके।
+
+**4. क्लाउड स्टोरेज सर्विसेज़ इंटीग्रेशन**  
+AWS S3, Google Drive, या Azure Blob Storage के साथ सिंक करते समय, डाउनलोड और प्रोसेस करने से पहले डॉक्यूमेंट कम्पैटिबिलिटी वैलिडेट करें—बैंडविड्थ और प्रोसेसिंग टाइम बचता है।
+
+### बिल्ट‑इन जावा पर्याप्त हो सकता है
+
+सरल परिदृश्यों में जावा की बिल्ट‑इन मेथड्स काम कर सकते हैं:
+- **सिर्फ एक्सटेंशन चेक**: `file.getName().endsWith(".pdf")`  
+- **MIME टाइप डिटेक्शन**: `Files.probeContentType(path)`  
+- **बेसिक वैलिडेशन**: जब आप अपलोड स्रोत को नियंत्रित करते हैं और एक्सटेंशन पर भरोसा करते हैं  
+
+**महत्वपूर्ण चेतावनी:** बिल्ट‑इन मेथड्स को फ़ाइल रीनेम करके आसानी से धोखा दिया जा सकता है। `malicious.exe` को `document.pdf` में बदलने से एक्सटेंशन चेक पास हो जाएगा, लेकिन सही वैलिडेशन फेल होगी। GroupDocs.Signature गहरी कंटेंट इन्स्पेक्शन करता है।
+
+## सामान्य समस्याएँ और ट्रबलशूटिंग
+
+आपको आमतौर पर ये समस्याएँ मिलेंगी और उन्हें जल्दी कैसे सॉल्व करें।
+
+### Issue 1: Empty or Null List Returned
+
+**Symptom:** `getSupportedFileTypes()` एक खाली लिस्ट या null रिटर्न करता है।
+
+**Causes & Solutions:**
+- **Library not properly initialized**: Verify your Maven/Gradle dependency is correctly added and synced  
+- **Version compatibility**: Ensure you're using version 23.12 or later (earlier versions may have different APIs)  
+- **Classpath issues**: If using manual JAR files, confirm they're properly added to your classpath  
+
+**Quick fix:**
+```java
+List<FileType> formats = FileType.getSupportedFileTypes();
+if (formats == null || formats.isEmpty()) {
+    System.err.println("Error: No file types loaded. Check library initialization.");
+    return;
+}
+```
+
+### Issue 2: Missing Expected Format
+
+**Symptom:** वह फ़ॉर्मेट जो आप उम्मीद कर रहे थे, समर्थित लिस्ट में नहीं है।
+
+**Possible reasons:**
+- आप एक स्पेशलाइज़्ड फ़ॉर्मेट उपयोग कर रहे हैं जिसके लिए अतिरिक्त प्लगइन्स चाहिए (कुछ CAD या मेडिकल इमेजिंग फ़ॉर्मेट अलग मॉड्यूल की मांग करते हैं)  
+- फ़ॉर्मेट नए संस्करण में जोड़ा गया—रिलीज़ नोट्स देखें  
+- फ़ॉर्मेट रीडिंग के लिए सपोर्टेड है लेकिन सिग्नेचर ऑपरेशन्स के लिए नहीं (GroupDocs.Signature मुख्यतः सिग्नेचर जोड़ने के लिए है, सभी ऑपरेशन्स सभी फ़ॉर्मेट को समान रूप से सपोर्ट नहीं करते)
+
+**Debugging approach:**
+```java
+// Check for specific format
+boolean hasPDF = supportedFileTypes.stream()
+    .anyMatch(ft -> ft.getExtension().equalsIgnoreCase(".pdf"));
+System.out.println("PDF supported: " + hasPDF);
+```
+
+### Issue 3: Performance Degradation with Large Format Lists
+
+**Symptom:** `getSupportedFileTypes()` को बार‑बार कॉल करने से एप्लिकेशन धीमा हो जाता है।
+
+**Solution:** परिणाम को कैश करें! यह लिस्ट रन‑टाइम में नहीं बदलती:
+
+```java
+public class FormatCache {
+    private static List<FileType> cachedFormats = null;
+    
+    public static List<FileType> getSupportedFormats() {
+        if (cachedFormats == null) {
+            cachedFormats = FileType.getSupportedFileTypes();
+        }
+        return cachedFormats;
+    }
+}
+```
+
+यह पैटर्न सुनिश्चित करता है कि आप लाइब्रेरी को केवल एक बार क्वेरी करें, जिससे थ्रूपुट बेहतर होता है।
+
+### Issue 4: License-Related Limitations
+
+**Symptom:** इवैल्यूएशन वार्निंग या सीमित फ़ॉर्मेट सपोर्ट मिल रहा है।
+
+**Solution:** 
+- किसी भी GroupDocs मेथड को कॉल करने से पहले अपना लाइसेंस अप्लाई करें  
+- लाइसेंस फ़ाइल पाथ सही है या नहीं जांचें  
+- यदि टेम्पररी लाइसेंस उपयोग कर रहे हैं तो एक्सपायरी डेट चेक करें  
+
+```java
+try {
+    License license = new License();
+    license.setLicense("path/to/GroupDocs.Signature.lic");
+} catch (Exception e) {
+    System.err.println("License error: " + e.getMessage());
+}
+```
+
+## फ़ाइल फ़ॉर्मेट डिटेक्शन के लिए बेस्ट प्रैक्टिसेज
+
+इन दिशानिर्देशों का पालन करके आप अपने एप्लिकेशन में मजबूत और मेंटेनेबल डिटेक्शन बना सकते हैं।
+
+### 1. Validate Early, Fail Fast
+
+प्रोसेसिंग पाइपलाइन में जितनी जल्दी हो सके फ़ाइल फ़ॉर्मेट चेक करें:
+
+```java
+public boolean validateFileFormat(String filePath) {
+    String extension = getFileExtension(filePath);
+    List<FileType> supported = FormatCache.getSupportedFormats();
+    
+    boolean isSupported = supported.stream()
+        .anyMatch(ft -> ft.getExtension().equalsIgnoreCase(extension));
+    
+    if (!isSupported) {
+        throw new UnsupportedFormatException(
+            "File format " + extension + " is not supported"
+        );
+    }
+    return true;
+}
+```
+
+यह असमर्थित फ़ॉर्मेट पर बर्बाद प्रोसेसिंग टाइम को रोकता है।
+
+### 2. Provide Clear User Feedback
+
+फ़ाइल रेजेक्ट करते समय उपयोगकर्ता को ठीक‑ठीक बताएं कि कौन‑से फ़ॉर्मेट सपोर्टेड हैं:
+
+```java
+public String getSupportedFormatsMessage() {
+    List<FileType> formats = FormatCache.getSupportedFormats();
+    String extensions = formats.stream()
+        .map(FileType::getExtension)
+        .collect(Collectors.joining(", "));
+    
+    return "Supported formats: " + extensions;
+}
+```
+
+### 3. Don't Trust File Extensions Alone
+
+`.exe` को `.pdf` में रीनेम करने से एक्सटेंशन `.pdf` दिखेगा, लेकिन यह वैध PDF नहीं होगा। GroupDocs.Signature कंटेंट वैलिडेशन करता है, फिर भी आप दोनों एप्रोच को मिलाकर उपयोग करें:
+
+```java
+// First check extension (fast)
+if (!hasValidExtension(file)) {
+    return false;
+}
+
+// Then validate with library (more thorough)
+try (Signature signature = new Signature(file)) {
+    // If initialization succeeds, format is valid
+    return true;
+} catch (Exception e) {
+    return false;
+}
+```
+
+### 4. Handle Exceptions Gracefully
+
+फ़ाइल वैलिडेशन कई कारणों से फेल हो सकता है—इनको एरर हैंडलिंग में कवर करें:
+
+```java
+public ValidationResult validateDocument(String path) {
+    try {
+        // Your validation logic
+        return ValidationResult.success();
+    } catch (UnsupportedFormatException e) {
+        return ValidationResult.failure("Unsupported format: " + e.getMessage());
+    } catch (IOException e) {
+        return ValidationResult.failure("File access error: " + e.getMessage());
+    } catch (Exception e) {
+        return ValidationResult.failure("Unexpected error: " + e.getMessage());
+    }
+}
+```
+
+### 5. Monitor Format Support Changes
+
+जब GroupDocs.Signature लाइब्रेरी अपडेट करें, तो रिलीज़ नोट्स देखें:
+- नए सपोर्टेड फ़ॉर्मेट  
+- डिप्रिकेटेड फ़ॉर्मेट  
+- फ़ॉर्मेट डिटेक्शन में बदले हुए व्यवहार  
+
+अपेक्षित फ़ॉर्मेट की सपोर्ट की पुष्टि करने के लिए यूनिट टेस्ट जोड़ें:
+
+```java
+@Test
+public void testEssentialFormatsSupported() {
+    List<String> required = Arrays.asList(".pdf", ".docx", ".xlsx");
+    List<FileType> supported = FileType.getSupportedFileTypes();
+    
+    for (String format : required) {
+        assertTrue(
+            supported.stream().anyMatch(ft -> ft.getExtension().equals(format)),
+            format + " should be supported"
+        );
+    }
+}
+```
+
+## प्रदर्शन विचार
+
+फ़ाइल फ़ॉर्मेट डिटेक्शन छोटा लग सकता है, लेकिन हजारों डॉक्यूमेंट या समवर्ती अपलोड प्रोसेस करते समय इसका असर बड़ा होता है।
+
+### मेमोरी मैनेजमेंट
+
+**कैशिंग स्ट्रेटेजी:** जैसा ऊपर बताया गया, सपोर्टेड फ़ॉर्मेट लिस्ट को कैश करें:
+
+```java
+// Good: Load once, reuse many times
+private static final List<FileType> SUPPORTED_FORMATS = 
+    FileType.getSupportedFileTypes();
+
+// Bad: Loads list every time method is called
+public boolean isSupported(String ext) {
+    return FileType.getSupportedFileTypes().stream()
+        .anyMatch(ft -> ft.getExtension().equals(ext));
+}
+```
+
+**क्यों महत्वपूर्ण है:** फ़ॉर्मेट लिस्ट लोड करने में रिफ्लेक्शन और लाइब्रेरी इनिशियलाइज़ेशन शामिल है। इसे एक बार करना CPU साइकिल और मेमोरी अलोकेशन बचाता है।
+
+### रिसोर्स यूज़ेज गाइडलाइन्स
+
+**हाई‑वॉल्यूम परिदृश्य के लिए:**
+- थ्रेड‑सेफ़ कैश का उपयोग करें (उपरोक्त इम्प्लीमेंटेशन इम्यूटेबल है, इसलिए थ्रेड‑सेफ़)  
+- यदि एप्लिकेशन हमेशा फ़ॉर्मेट डिटेक्शन नहीं करता, तो लेज़ी इनिशियलाइज़ेशन पर विचार करें  
+- डॉक्यूमेंट प्रोसेस करते समय `Signature` ऑब्जेक्ट्स को तुरंत क्लोज़ करें ताकि रिसोर्स फ्री हो सकें  
+
+```java
+try (Signature signature = new Signature(filePath)) {
+    // Process document
+} // Automatically closed, resources freed
+```
+
+### बैच प्रोसेसिंग ऑप्टिमाइज़ेशन
+
+यदि कई फ़ाइलों की वैलिडेशन करनी है, तो पैरललाइज़ेशन पर विचार करें:
+
+```java
+List<String> files = Arrays.asList("doc1.pdf", "doc2.docx", "doc3.xlsx");
+
+// Process in parallel
+files.parallelStream()
+    .forEach(file -> {
+        if (validateFileFormat(file)) {
+            processDocument(file);
+        }
+    });
+```
+
+**सावधानी:** अत्यधिक थ्रेड्स नहीं बनाएं। यदि आप I/O बाउंड हैं (डिस्क से पढ़ रहे हैं), तो बहुत सारे थ्रेड्स मदद नहीं करेंगे। अपना ऑप्टिमल थ्रेड काउंट टेस्ट करके तय करें।
+
+### JVM ट्यूनिंग टिप्स
+
+डॉक्यूमेंट‑हेवी एप्लिकेशन के लिए:
+- हीप साइज बढ़ाएँ: `-Xmx2g` (ज़रूरत के अनुसार समायोजित करें)  
+- गार्बेज कलेक्शन मॉनिटर करें: `-XX:+PrintGCDetails` से समस्याओं की पहचान करें  
+- बेहतर पॉज़ टाइम के लिए G1GC उपयोग करें: `-XX:+UseG1GC`
+
+## व्यावहारिक एप्लिकेशन और इंटीग्रेशन
+
+आइए देखें कुछ रियल‑वर्ल्ड सीनारियो जहाँ फ़ाइल फ़ॉर्मेट डिटेक्शन आवश्यक बन जाता है।
+
+### 1. डॉक्यूमेंट मैनेजमेंट सिस्टम
+
+**सिनेरियो:** उपयोगकर्ता दस्तावेज़ अपलोड करते हैं जिन्हें इंडेक्स, प्रोसेस और स्टोर करना है।
+
+**इम्प्लीमेंटेशन पैटर्न:**
+```java
+public class DocumentUploadHandler {
+    public void handleUpload(MultipartFile file) {
+        // Validate format first
+        if (!isFormatSupported(file.getOriginalFilename())) {
+            throw new InvalidFormatException(
+                "Please upload: " + getSupportedFormatsString()
+            );
+        }
+        
+        // Process valid document
+        processAndStore(file);
+    }
+    
+    private boolean isFormatSupported(String filename) {
+        String ext = getExtension(filename);
+        return FormatCache.getSupportedFormats().stream()
+            .anyMatch(ft -> ft.getExtension().equalsIgnoreCase(ext));
+    }
+}
+```
+
+### 2. क्लाउड स्टोरेज इंटीग्रेशन
+
+**सिनेरियो:** AWS S3 या Google Drive से डॉक्यूमेंट सिंक करना और केवल सपोर्टेड फ़ॉर्मेट प्रोसेस करना।
+
+**क्यों उपयोगी है:** असपोर्टेड फ़ाइलों को डाउनलोड और प्रोसेस करने से बचा जाता है, जिससे बैंडविड्थ और प्रोसेसिंग टाइम बचता है।
+
+```java
+public void syncFromS3(String bucketName) {
+    S3Client s3 = S3Client.create();
+    ListObjectsV2Request listReq = ListObjectsV2Request.builder()
+        .bucket(bucketName)
+        .build();
+    
+    ListObjectsV2Response listing = s3.listObjectsV2(listReq);
+    
+    for (S3Object object : listing.contents()) {
+        if (isFormatSupported(object.key())) {
+            // Download and process only supported formats
+            downloadAndProcess(bucketName, object.key());
+        } else {
+            logger.info("Skipping unsupported format: " + object.key());
+        }
+    }
+}
+```
+
+### 3. एंटरप्राइज़ वर्कफ़्लो ऑटोमेशन
+
+**सिनेरियो:** डॉक्यूमेंट को उनके टाइप के आधार पर विभिन्न प्रोसेसिंग पाइपलाइन में रूट करना।
+
+**उदाहरण:** PDFs सिग्नेचर वर्कफ़्लो में, स्प्रेडशीट्स डेटा एक्सट्रैक्शन में, इमेजेज OCR प्रोसेसिंग में।
+
+```java
+public void routeDocument(String filePath) {
+    try (Signature signature = new Signature(filePath)) {
+        FileType type = signature.getDocumentInfo().getFileType();
+        
+        switch (type.getExtension()) {
+            case ".pdf":
+            case ".docx":
+                sendToSignatureWorkflow(filePath);
+                break;
+            case ".xlsx":
+            case ".csv":
+                sendToDataExtractionWorkflow(filePath);
+                break;
+            case ".jpg":
+            case ".png":
+                sendToOCRWorkflow(filePath);
+                break;
+            default:
+                logger.warn("No workflow defined for: " + type.getExtension());
+        }
+    }
+}
+```
+
+### 4. फ़ाइल टाइप पिकर्स बनाना
+
+**सिनेरियो:** डायनामिक फ़ॉर्मेट सपोर्ट के साथ UI कंपोनेंट बनाना।
+
+**फ़्रंटएंड इंटीग्रेशन उदाहरण:**
+```java
+@RestController
+public class FormatController {
+    @GetMapping("/api/supported-formats")
+    public ResponseEntity<List<String>> getSupportedFormats() {
+        List<String> extensions = FileType.getSupportedFileTypes().stream()
+            .map(FileType::getExtension)
+            .sorted()
+            .collect(Collectors.toList());
+        
+        return ResponseEntity.ok(extensions);
+    }
+}
+```
+
+आपका फ्रंटएंड फिर इस डेटा को फ़ाइल अपलोड कंपोनेंट को कॉन्फ़िगर करने के लिए उपयोग कर सकता है:
+```javascript
+// Frontend code (for context, not part of Java implementation)
+fetch('/api/supported-formats')
+    .then(res => res.json())
+    .then(formats => {
+        fileInput.accept = formats.join(',');
+    });
+```
+
+## फ़ाइल एक्सटेंशन जावा कैसे जांचें?
+
+फ़ाइल नाम लोड करें, उसका सफ़िक्स निकालें, और `Signature.getSupportedFileTypes()` द्वारा रिटर्न की गई कैश्ड लिस्ट के खिलाफ तुलना करें। यह दो‑स्टेप एप्रोच सुनिश्चित करता है कि आप हार्ड‑कोडेड एरे की बजाय अपडेटेड कैटलॉग के खिलाफ चेक कर रहे हैं। साथ ही यह स्पूफ़्ड एक्सटेंशन को रोकता है क्योंकि GroupDocs.Signature आगे की प्रोसेसिंग से पहले फ़ाइल हेडर वैलिडेट करता है।
+
+## GroupDocs.Signature क्या है?
+
+GroupDocs.Signature एक जावा लाइब्रेरी है जो डेवलपर्स को 50 से अधिक डॉक्यूमेंट फ़ॉर्मेट में डिजिटल सिग्नेचर जोड़ने, वैरिफ़ाई करने और मैनेज करने की सुविधा देती है। यह PDF, Office, इमेजेज और कई अन्य प्रकारों के लिए यूनिफ़ाइड API प्रदान करती है, और एन्क्रिप्टेड फ़ाइलें, पासवर्ड‑प्रोटेक्टेड डॉक्यूमेंट, और मल्टी‑पेज सिग्नेचर जैसे जटिल वैरिफ़िकेशन परिदृश्यों को संभालती है।
+
+## लाइब्रेरी‑आधारित डिटेक्शन को जावा के बिल्ट‑इन मेथड्स की बजाय क्यों उपयोग करें?
+
+लाइब्रेरी‑आधारित डिटेक्शन वास्तविक फ़ाइल हेडर और इंटरनल स्ट्रक्चर को इन्स्पेक्ट करता है, जिससे यह सुनिश्चित होता है कि कंटेंट वाकई दावे किए गए फ़ॉर्मेट से मेल खाता है। बिल्ट‑इन मेथड्स जैसे `Files.probeContentType` या साधारण स्ट्रिंग सफ़िक्स चेक को रीनेमिंग से आसानी से धोखा दिया जा सकता है। GroupDocs.Signature इस जोखिम को गहरी कंटेंट एनालिसिस करके समाप्त करता है, जिससे आगे की प्रोसेसिंग सुरक्षित हो जाती है।
+
+## सपोर्टेड फ़ाइल फ़ॉर्मेट लिस्ट को कब कैश करना चाहिए?
+
+एप्लिकेशन स्टार्टअप पर या पहली बार आवश्यकता होने पर फ़ॉर्मेट लिस्ट को कैश करें, और JVM के जीवनकाल तक इम्यूटेबल कलेक्शन को री‑यूज़ करें। हाई‑थ्रूपुट वेब सर्विसेज़ में यह विशेष रूप से फायदेमंद है जहाँ प्रत्येक रिक्वेस्ट रिफ्लेक्शन‑हैवी लाइब्रेरी इनिशियलाइज़ेशन को ट्रिगर कर सकता है, जिससे कॉल पर मिलीसेकंड की लेटेंसी जुड़ती है।
+
+## जावा में असपोर्टेड फ़ाइल फ़ॉर्मेट को कैसे हैंडल करें?
+
+असमर्थित फ़ॉर्मेट को जल्दी पहचानें, ऑडिट के लिए लॉग करें, और उपयोगकर्ता को स्पष्ट एरर मैसेज दें जिसमें अनुमति वाले एक्सटेंशन की लिस्ट हो। यह यूज़र एक्सपीरियंस को बेहतर बनाता है और बैकएंड पर अनावश्यक प्रोसेसिंग लोड को कम करता है।
+
+## अक्सर पूछे जाने वाले प्रश्न
+
+**Q: GroupDocs.Signature लाइब्रेरी का संस्करण Maven में कैसे अपडेट करें?**  
+A: अपने `pom.xml` में `<version>` टैग को इच्छित संस्करण में बदलें, फिर `mvn clean install` चलाएँ। हमेशा [release notes](https://releases.groupdocs.com/signature/java/) देखें ताकि ब्रेकिंग चेंजेज़ का पता चल सके।
+
+**Q: क्या GroupDocs.Signature फ़ाइल फ़ॉर्मेट का पता लगा सकता है यदि एक्सटेंशन गलत हो?**  
+A: हाँ। लाइब्रेरी कंटेंट‑बेस्ड वैलिडेशन करती है, इसलिए `.exe` को `.pdf` में रीनेम करने पर भी इसे वैध PDF के रूप में नहीं माना जाएगा। `getSupportedFileTypes()` केवल उन फ़ॉर्मेट की लिस्ट देता है जिन्हें लाइब्रेरी हैंडल कर सकती है; वास्तविक फ़ाइल टाइप की पुष्टि के लिए फ़ाइल खोलनी होगी।
+
+**Q: फ्री ट्रायल और टेम्पररी लाइसेंस में क्या अंतर है?**  
+A: फ्री ट्रायल तुरंत एक्सेस देता है लेकिन इसमें एवाल्यूएशन वॉटरमार्क और कुछ फीचर लिमिट्स होते हैं। टेम्पररी लाइसेंस 30 दिनों के लिए पूर्ण फीचर एक्सेस बिना वॉटरमार्क के प्रदान करता है, जिससे प्रोडक्शन‑जैसे वातावरण में पूरी तरह से टेस्ट किया जा सकता है।
+
+**Q: मेरे एप्लिकेशन में असपोर्टेड फ़ाइल फ़ॉर्मेट को कैसे हैंडल करें?**  
+A: “Unsupported format. Supported extensions are: .pdf, .docx, .xlsx, .png, .jpg.” जैसा संक्षिप्त एरर रिटर्न करें। सुरक्षा मॉनिटरिंग के लिए इन्सिडेंट लॉग करें और यूज़र को टूलटिप या UI मैसेज के माध्यम से अनुमति वाले टाइप दिखाएँ।
+
+**Q: क्या GroupDocs.Signature एन्क्रिप्टेड या पासवर्ड‑प्रोटेक्टेड फ़ाइलों को डिटेक्ट कर सकता है?**  
+A: हाँ, लेकिन सिग्नेचर जोड़ने के समय आपको पासवर्ड प्रदान करना होगा। फ़ॉर्मेट डिटेक्शन स्वयं पासवर्ड की आवश्यकता नहीं रखता, लेकिन आगे की प्रोसेसिंग (जैसे सिग्नेचर जोड़ना) के लिए पासवर्ड ज़रूरी होगा।
+
+**Q: क्या GroupDocs.Signature के लिए कोई कम्युनिटी या सपोर्ट फोरम है?**  
+A: बिल्कुल! [GroupDocs Forum](https://forum.groupdocs.com/c/signature/) पर कम्युनिटी डिस्कशन, कोड उदाहरण, और GroupDocs टीम से सीधे उत्तर मिलते हैं।
 
 ## संसाधन
-- **प्रलेखन**: विस्तृत दस्तावेज़ीकरण देखें [ग्रुपडॉक्स दस्तावेज़ीकरण](https://docs.groupdocs.com/signature/java/)
-- **एपीआई संदर्भ**: व्यापक API विवरण यहां देखें [ग्रुपडॉक्स API संदर्भ](https://reference.groupdocs.com/signature/java/)
-- **लाइब्रेरी डाउनलोड करें**: नवीनतम संस्करण प्राप्त करें [ग्रुपडॉक्स रिलीज़](https://releases.groupdocs.com/signature/java/)
-- **खरीद और लाइसेंसिंग**: दौरा करना [खरीद पृष्ठ](https://purchase.groupdocs.com/buy) लाइसेंसिंग विकल्पों के लिए.
-- **मुफ्त परीक्षण**: यहां से निःशुल्क परीक्षण डाउनलोड करके सुविधाओं का परीक्षण करें [ग्रुपडॉक्स निःशुल्क परीक्षण](https://release)
+
+**डॉक्यूमेंटेशन:**  
+- [GroupDocs.Signature for Java Documentation](https://docs.groupdocs.com/signature/java/) – व्यापक गाइड और ट्यूटोरियल  
+- [API Reference](https://reference.groupdocs.com/signature/java/) – सभी क्लासेज़ और मेथड्स की पूरी रेफ़रेंस  
+
+**डाउनलोड और लाइसेंसिंग:**  
+- [Download Library](https://releases.groupdocs.com/signature/java/) – नवीनतम रिलीज़ और संस्करण इतिहास  
+- [Purchase Licenses](https://purchase.groupdocs.com/buy) – प्राइसिंग और लाइसेंस विकल्प  
+- [Free Trial](https://releases.groupdocs.com/signature/java/) – तुरंत टेस्टिंग शुरू करें  
+
+**सपोर्ट और कम्युनिटी:**  
+- [GroupDocs Forum](https://forum.groupdocs.com/c/signature/) – कम्युनिटी डिस्कशन और सपोर्ट  
+
+---
+
+**अंतिम अपडेट:** 2026-05-11  
+**परिक्षित संस्करण:** GroupDocs.Signature 23.12 for Java  
+**लेखक:** GroupDocs  
+
+```xml
+<version>24.1</version>  <!-- Update to newer version -->
+```
+
+```java
+try {
+    validateAndProcess(file);
+} catch (UnsupportedFormatException e) {
+    return ResponseEntity
+        .badRequest()
+        .body("Unsupported format. Please upload: " + getSupportedFormatsString());
+}
+```
+
+```java
+LoadOptions loadOptions = new LoadOptions();
+loadOptions.setPassword("your-password");
+Signature signature = new Signature("protected.pdf", loadOptions);
+```
+
+## संबंधित ट्यूटोरियल्स
+
+- [Add QR Code to PDF Java - Complete Guide with GroupDocs.Signature](/signature/java/qr-code-signatures/qr-code-signatures-java-groupdocs/)  
+- [Java Text Signature Search - A Complete Guide to Document Verification with GroupDocs.Signature](/signature/java/search-verification/java-text-signature-search-groupdocs-signature/)  
+- [Digital Signature in Java - Complete Guide to Certificate Loading and Document Signing](/signature/java/digital-signatures/digital-signature-loading-signing-groupdocs-java/)
